2002-10-10  Adam Fedor  <fedor@gnu.org>

	* GNUmakefile.postamble: Only install back.make if building
	as a library.

2002-10-10  Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/XGGState.m
	DPSsetdash::: now accepts an empty dash pattern, signaling a reset
	to a solid line.

2002-10-08  Adam Fedor  <fedor@gnu.org>

	* Update for front-end passing colorspaces and fonts
	in overridable way.
	* Headers/gsc/GSGStateOps.h: Update changed methods.
	* Source/art/ARTContext.m: Font ivar is now a GSFontInfo
	class, so use 'font' instead of '[font fontInfo]'.
	* Source/gsc/GSContext.m (-GSSetFont): Idem.
	(-GSSetFillColorspace:): Implement.
	(-GSSetStrokeColorspace:): Idem.
	(-GSSetFillColor:): Idem.
	(-GSSetStrokeColor:): Idem.
	* Source/gsc/GSGState.m: Update font ivar handling.
	* Source/gsc/GSStreamContext.m: Idem.
	* Source/winlib/WIN32GState.m: Idem.
	* Source/xlib/XGGState.m: Idem.

	* Window focus fixes
	* Source/x11/XGServerEvent.m ([XGServer
	-receivedEvent:type:extra:forMode:](ClientMessage/TAKE_FOCUS)):
	Use given window as focus window, not one under mouse.
	* Source/x11/XGServerWindow.m ([XGServer -setinputfocus:]): Don't
	reset focus if we already requested it on this window.
	
2002-09-28 22:04  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ftfont.m: Add .font package handling again.

2002-09-28 17:30  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ftfont.m (load_font_configuration): Handle the
	'Family' key.

2002-09-26 16:08  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ftfont.m: Implement handling of the 'ScreenFonts' key
	in .nfont packages.

2002-09-25 22:39  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ftfont.m: Rework font configuration code to handle
	the updated (and rather different) .nfont package format.

2002-09-24 14:38  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ftfont.m: Use GSFontAntiAlias defaults value to decide